--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -24,6 +24,16 @@ body {
   position: relative;
 }
 
+#fileInput.blind-date {
+  width: 80px;
+  height: 80px;
+  margin-left: -115px;
+  margin-top: 1px;
+  margin-bottom: 10px;
+  opacity: 0;
+  position: relative;
+}
+
 #fileInput.dragdrop > div > .custom-file > input {
   cursor: pointer;
   z-index: 0 !important;
