친구 - 본인 정보 입력 2,3단계

--- a/assets/scss/blind-date/apply-my-info.scss
+++ b/assets/scss/blind-date/apply-my-info.scss
@@ -172,6 +172,10 @@
             font-style: normal;
             font-weight: 500;
             line-height: normal;
+            &.textarea {
+              padding: 16px;
+              height: 146px;
+            }
           }
 
           .input-long:focus {
