상대 정보 입력 1단계

--- a/assets/scss/blind-date/apply.scss
+++ b/assets/scss/blind-date/apply.scss
@@ -1,4 +1,4 @@
-#ApplyMyInfoPage {
+#ApplyPage {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -64,6 +64,29 @@
       img {
         width: 335px;
         height: 8px;
+      }
+    }
+  }
+  .notice {
+    .notice-wrp {
+      display: flex;
+      padding: 10px 12px;
+      margin: 0 20px 20px 20px;
+      border-radius: 8px;
+      border: 1px solid #d2ceff;
+
+      background: #f1f0ff;
+      color: var(--gray-80, #454545);
+      font-family: Pretendard;
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 500;
+      .left {
+        padding-top: 2px;
+        img {
+          width: 16px;
+          margin-right: 6px;
+        }
       }
     }
   }
@@ -133,6 +156,21 @@
               font-style: normal;
               font-weight: 500;
             }
+            .must-matching-condition {
+              display: flex;
+              padding: 8px 0px;
+              gap: 10px;
+              color: var(--gray-80, #454545);
+              font-family: Pretendard;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 500;
+              .icon {
+                img {
+                  width: 16px;
+                }
+              }
+            }
           }
           .add-btn {
             width: 32px;
@@ -193,7 +231,7 @@
             display: flex;
             gap: 12px;
             .button-half {
-              flex-grow: 1;
+              flex-basis: calc(50% - 8px);
               height: 44px;
               border-radius: 6px;
               border: 1px solid #eee;
