상대 정보 입력 4단계 수정

--- a/assets/scss/blind-date/apply.scss
+++ b/assets/scss/blind-date/apply.scss
@@ -90,6 +90,24 @@
       }
     }
   }
+  .notice-kakao {
+    padding: 0 20px 20px 20px;
+    color: #7a7a7a;
+
+    font-family: Pretendard;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    strong {
+      color: var(--gray-80, #454545);
+      font-family: Pretendard;
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 18px;
+    }
+  }
   .content {
     width: 100vw;
     height: calc(100vh - 188px);
