--- a/assets/scss/blind-date/apply.scss
+++ b/assets/scss/blind-date/apply.scss
@@ -206,6 +206,15 @@
             font-size: 13px;
             font-style: normal;
             font-weight: 400;
+
+            .gray {
+              color: #7a7a7a;
+
+              font-family: Pretendard;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 500;
+            }
           }
           .sub-desc {
             margin-top: 12.5px;
