--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -67,7 +67,7 @@ body {
 #fileInput.authpage {
   width: calc(100% - 40px);
   height: 300px;
-  margin-top: -370px !important;
+  margin-top: -180px;
   margin-bottom: 10px;
   opacity: 0;
   position: relative;
@@ -80,6 +80,7 @@ body {
 #fileInput.authpage > div > .custom-file > input {
   cursor: pointer;
   z-index: 0 !important;
+  margin-top: -370px !important;
   width: 100%;
   height: 300px;
   margin: 0 auto;
