feat: 투명도 조정

--- a/assets/scss/g-blind-date/intro.scss
+++ b/assets/scss/g-blind-date/intro.scss
@@ -409,7 +409,7 @@
     }
 
     .btn-comming-soon {
-      background-color: rgba(93, 80, 225, 0.35);
+      background-color: rgb(183,178,239);
       color: rgba(255, 255, 255, 1);
 
       font-family: Pretendard;
