--- a/assets/scss/blind-date/apply-intro.scss
+++ b/assets/scss/blind-date/apply-intro.scss
@@ -111,6 +111,25 @@
       }
     }
 
+    .cancel-wrp {
+      padding: 20px;
+      align-items: center;
+      text-align: center;
+      gap: 4px;
+
+      color: var(--gray-80, #454545);
+      font-family: Pretendard;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 500;
+      strong {
+        color: #6254f0;
+        font-weight: 500;
+        font-family: Pretendard;
+        font-size: 15px;
+      }
+    }
+
     .bottom {
       padding-bottom: 20px;
       .complete-btn {
@@ -127,6 +146,84 @@
         font-style: normal;
         font-weight: 500;
         text-align: center;
+      }
+    }
+  }
+  .popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .content-wrp {
+      width: 355px;
+      height: 194px;
+      border-radius: 12px;
+      background: #fff;
+      .top {
+        display: flex;
+        padding: 40px 0px 24px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        div:first-child {
+          color: #061935;
+          text-align: center;
+          font-family: Pretendard;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px;
+        }
+        div:nth-child(2) {
+          margin-top: 8px;
+          color: #5c6c82;
+          text-align: center;
+          font-family: Pretendard;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+        }
+      }
+      .btn {
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+        padding: 16px;
+        div {
+          width: 145px;
+          height: 48px;
+          line-height: 48px;
+          text-align: center;
+        }
+        div:first-child {
+          border-radius: 8px;
+          border: 1px solid #dedede;
+          background: #fff;
+          color: #404040;
+
+          font-family: Pretendard;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+        }
+        div:nth-child(2) {
+          border-radius: 8px;
+          border: 1px solid #dedede;
+          background: #fff;
+          color: #6254f0;
+          border: 1px solid #6254f0;
+
+          font-family: Pretendard;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+        }
       }
     }
   }
