fix: 이번주 한동 주차 표시 제거

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -316,7 +316,7 @@
   .mobile-env {
     width: 100vw;
     padding-bottom: 30px;
-    height: calc(100vh - 185px);
+    height: calc(100vh - 180px);
     // height: 500px;
     // overflow-y: scroll;
     overflow: auto;
@@ -382,8 +382,8 @@
         width: 130px;
         height: 36px;
 
-        background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
-        border: 1px solid #E7E7E7;
+        background: linear-gradient(0deg, #ffffff, #ffffff), #ffffff;
+        border: 1px solid #e7e7e7;
         border-radius: 6px;
 
         img {
