fix: 참여비 페이지 isShow default값 수정

--- a/assets/scss/blind-date/g-fee.scss
+++ b/assets/scss/blind-date/g-fee.scss
@@ -210,6 +210,7 @@
         border: 1px;
         border: 1px solid rgba(236, 236, 236, 1);
         padding-left: 12px;
+        font-size: 14px;
 
         &::placeholder {
           color: rgba(163, 163, 163, 0.4);
