--- a/assets/scss/blind-date/matching.scss
+++ b/assets/scss/blind-date/matching.scss
@@ -191,24 +191,65 @@
     .footer {
       padding: 20px;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       gap: 13px;
       background-color: rgba(255, 255, 255, 1);
 
-      .kakao-btn {
-        flex-grow: 1;
-        height: 48px;
-        flex-shrink: 0;
-        border-radius: 6px;
-        background: #d9d9d9;
-        color: #fff;
+      .desc {
+        display: flex;
+        padding-left: 10px;
+        padding-bottom: 10px;
         font-family: Pretendard;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 48px;
-        text-align: center;
-        background: #6254f0;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0em;
+        text-align: left;
+
+        .popup {
+          padding-left: 5px;
+          color: rgba(93, 80, 225, 1);
+        }
+      }
+
+      .btn-list {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .rematch-btn {
+          padding: 13px 35px;
+          border-radius: 6px;
+          border: 1px solid rgba(93, 80, 225, 1);
+          color: rgba(93, 80, 225, 1);
+          font-family: Pretendard;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          text-align: center;
+          display: flex;
+          align-self: center;
+        }
+        .kakao-btn {
+          padding: 13px 35px;
+          color: #fff;
+          font-family: Pretendard;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          text-align: center;
+          background: #6254f0;
+          border-radius: 6px;
+          border: 1px solid rgba(93, 80, 225, 1);
+          display: flex;
+          align-self: center;
+        }
+
+        .accusation-btn {
+          img {
+            height: 44px;
+          }
+        }
       }
     }
   }
@@ -438,6 +479,90 @@
         line-height: 48px;
         text-align: center;
         background: #6254f0;
+      }
+    }
+  }
+
+  .ask-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    .content-wrp {
+      width: 320px;
+      height: 275px;
+      border-radius: 12px;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .top {
+        display: flex;
+        width: 320px;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 5px;
+
+        color: rgba(6, 25, 53, 1);
+        font-family: Pretendard;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+        padding-bottom: 8px;
+
+        div:nth-child(3) {
+          color: rgba(92, 108, 130, 1);
+          font-family: Pretendard;
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 18px;
+          letter-spacing: 0em;
+          text-align: center;
+          padding-top: 10px;
+        }
+      }
+      .btn {
+        border-radius: 8px;
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        color: #454545;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+        .btn-content-wrp {
+          width: max-content;
+          margin: 0 auto;
+          display: flex;
+          .copy {
+            margin-top: 3px;
+            img {
+              width: 20px;
+              margin-right: 8px;
+            }
+          }
+        }
+
+        margin-bottom: 15px;
+      }
+
+      .btn1 {
+        margin-bottom: 8px;
       }
     }
   }
