--- a/assets/scss/blind-date/matching.scss
+++ b/assets/scss/blind-date/matching.scss
@@ -566,4 +566,95 @@
       }
     }
   }
+
+  .rematch-ask-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    .content-wrp {
+      width: 320px;
+      height: 225px;
+      border-radius: 12px;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .top {
+        display: flex;
+        width: 320px;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 5px;
+
+        color: rgba(6, 25, 53, 1);
+        font-family: Pretendard;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+        padding-bottom: 8px;
+
+        div:nth-child(3), div:nth-child(4) {
+          color: rgba(92, 108, 130, 1);
+          font-family: Pretendard;
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 18px;
+          letter-spacing: 0em;
+          text-align: center;
+        }
+
+        div:nth-child(3) {
+          padding-top: 15px;
+        }
+      }
+
+      .btn-list {
+        display: flex;
+        justify-content: center;
+
+        .btn {
+          border-radius: 8px;
+          border: 1px solid #d9d9d9;
+          background: #fff;
+          color: #454545;
+          font-family: Pretendard;
+          font-size: 15px;
+          font-weight: 500;
+          .btn-content-wrp {
+            width: max-content;
+            margin: 0 auto;
+            display: flex;
+            align-self: center;
+          }
+
+          width: 140px;
+          height: 45px;
+          display: flex;
+          align-self: center;
+  
+          margin-bottom: 15px;
+        }
+
+        .btn2 {
+          color: rgba(98, 84, 240, 1);
+          border: 1px solid rgba(98, 84, 240, 1);
+          margin-left: 10px;
+        }
+      }
+    }
+  }
 }
