--- a/assets/scss/blind-date/matching.scss
+++ b/assets/scss/blind-date/matching.scss
@@ -581,7 +581,7 @@
 
     .content-wrp {
       width: 320px;
-      height: 225px;
+      height: 400px;
       border-radius: 12px;
       background: #fff;
       display: flex;
@@ -619,6 +619,30 @@
 
         div:nth-child(3) {
           padding-top: 15px;
+        }
+
+        .input-container {
+          .input-long {
+            width: 270px;
+            height: 150px;
+            border-radius: 8px;
+            border: 1px solid rgba(236, 236, 236, 1);
+            margin-top: 20px;
+  
+            font-family: Pretendard;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+            padding-left: 10px;
+            padding-top: 10px;
+  
+            &::placeholder {
+              position: relative;
+              color: rgba(163, 163, 163, 1);
+            }
+          }
         }
       }
 
