--- a/assets/scss/blind-date/matching.scss
+++ b/assets/scss/blind-date/matching.scss
@@ -483,6 +483,194 @@
     }
   }
 
+  .accusation-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: flex-end;
+    .content-wrp {
+      position: fixed;
+      bottom: 0;
+      width: calc(100% - 40px);
+      height: 408px;
+      padding: 24px 20px 36px 20px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 32px;
+      border-radius: 12px 12px 0px 0px;
+      background: #fff;
+      .title {
+        color: #000;
+        font-family: Pretendard;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin-bottom: 40px;
+      }
+      .select-wrp {
+        font-size: 15px;
+        display: flex;
+        margin-top: 12px;
+        color: rgba(69, 69, 69, 1);
+        .select-img {
+          margin-right: 8px;
+          img {
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+      .input-container {
+        .input-long {
+          width: 95%;
+          height: 150px;
+          border-radius: 8px;
+          border: 1px solid rgba(236, 236, 236, 1);
+          margin-top: 20px;
+
+          font-family: Pretendard;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 17px;
+          letter-spacing: 0em;
+          text-align: left;
+          padding-left: 10px;
+          padding-top: 10px;
+
+          &::placeholder {
+            position: relative;
+            color: rgba(163, 163, 163, 1);
+          }
+        }
+      }
+      .btn {
+        margin-top: 32px;
+        border-radius: 4px;
+        border: 1px solid #d9e5f4;
+        background: #fff;
+        height: 52px;
+        line-height: 52px;
+        text-align: center;
+        color: #414c5b;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 600;
+      }
+      .btn-list {
+        width: 100vw;
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .prev {
+          width: 50%;
+          flex-grow: 1;
+          height: 56px;
+          flex-shrink: 0;
+          background: #f3f5fb;
+          color: #5d50e1;
+          font-family: Pretendard;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 56px;
+          text-align: center;
+        }
+        .next {
+          width: 50%;
+          flex-grow: 1;
+          height: 56px;
+          background: var(--gray-50, #a3a3a3);
+          color: #fff;
+          font-family: Pretendard;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 56px;
+          text-align: center;
+          &.active {
+            background: #5d50e1;
+          }
+        }
+      }
+      
+    }
+  }
+  .complete-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .content-wrp {
+      width: 280px;
+      height: 188px;
+      border-radius: 12px;
+      background: #fff;
+      .top {
+        display: flex;
+        width: 280px;
+        height: 76px;
+        padding: 24px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+        div:first-child {
+          color: #061935;
+          font-family: Pretendard;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px; /* 133.333% */
+        }
+        div:nth-child(2) {
+          color: #5c6c82;
+          font-family: Pretendard;
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          text-align: center;
+        }
+      }
+      .btn {
+        border-radius: 8px;
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        color: #454545;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
+      }
+    }
+  }
+
   .ask-popup {
     position: fixed;
     top: 0;
