--- a/assets/scss/g-blind-date/rematching.scss
+++ b/assets/scss/g-blind-date/rematching.scss
@@ -439,6 +439,61 @@
         }
       }
     }
+    .select {
+      margin-top: 8px;
+      .option {
+        border-bottom: 1px solid #efefef;
+        background: var(--Base-White, #fff);
+        padding: 24px 20px;
+      }
+      label {
+        vertical-align: -3px;
+      }
+      // 기본스타일을 없애고, 버튼모양을 구현한다.
+      input[type='radio'] {
+        vertical-align: text-top;
+        -webkit-appearance: none; // 웹킷 브라우저에서 기본 스타일 제거
+        -moz-appearance: none; // 모질라 브라우저에서 기본 스타일 제거
+        appearance: none; // 기본 브라우저에서 기본 스타일 제거
+        width: 16px;
+        height: 16px;
+        border: 2px solid #ccc; // 체크되지 않았을 때의 테두리 색상
+        border-radius: 50%;
+        outline: none; // focus 시에 나타나는 기본 스타일 제거
+        margin: 4px 8px 0px 3px !important;
+        // margin-right: 10px !important;
+        cursor: pointer;
+      }
+
+      // 체크될 시에, 변화되는 스타일 설정
+      input[type='radio']:checked {
+        background-color: #31b987; // 체크 시 내부 원으로 표시될 색상
+        border: 3px solid white; // 테두리가 아닌, 테두리와 원 사이의 색상
+        box-shadow: 0 0 0 1.6px #31b987; // 얘가 테두리가 됨
+        // 그림자로 테두리를 직접 만들어야 함 (퍼지는 정도를 0으로 주면 테두리처럼 보입니다.)
+        // 그림자가 없으면 그냥 설정한 색상이 꽉 찬 원으로만 나옵니다.
+      }
+    }
+  }
+  .other {
+    padding: 20px;
+    background-color: #fff;
+    .next {
+      flex-grow: 1;
+      height: 56px;
+      background: #6254f0;
+      color: #fff;
+      font-family: Pretendard;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 56px;
+      text-align: center;
+      border-radius: 8px;
+      &.active {
+        background: #6254f0;
+      }
+    }
   }
   .btn-wrp {
     display: flex;
