--- a/assets/scss/blind-date/matching.scss
+++ b/assets/scss/blind-date/matching.scss
@@ -793,6 +793,107 @@
     }
   }
 
+  .lock-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    .content-wrp {
+      width: 320px;
+      height: 345px;
+      border-radius: 12px;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+
+      .img {
+        margin-top: 30px;
+        margin-bottom: -20px;
+        img {
+          width: 60px;
+        }
+      }
+
+      .top {
+        display: flex;
+        width: 320px;
+        // height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        // padding-top: 5px;
+        color: rgba(69, 69, 69, 1);
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: center;
+
+        .bold {
+          font-weight: 600;
+        }
+      }
+      .btn {
+        border-radius: 8px;
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        color: #454545;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+
+        .kakao-btn {
+          width: 280px;
+          color: #fff;
+          font-family: Pretendard;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          background: #6254f0;
+          border-radius: 6px;
+          border: 1px solid rgba(93, 80, 225, 1);
+          display: flex;
+          align-self: center;
+          justify-self: center;
+          text-align: center;
+
+          .desc {
+            width: 100%;
+          }
+        }
+
+        .btn-content-wrp {
+          width: max-content;
+          margin: 0 auto;
+          display: flex;
+          .copy {
+            margin-top: 3px;
+            img {
+              width: 20px;
+              margin-right: 8px;
+            }
+          }
+        }
+
+        margin-bottom: 15px;
+      }
+    }
+  }
+
   .rematch-ask-popup {
     position: fixed;
     top: 0;
