fix: 시간 수정 및 재매칭 css 이슈 해결

--- a/assets/scss/g-blind-date/rematching.scss
+++ b/assets/scss/g-blind-date/rematching.scss
@@ -94,7 +94,7 @@
         // justify-content: center;
         // align-items: center;
         gap: 32px;
-        overflow-y: scroll;
+        // overflow-y: scroll;
         .stage_01_top,
         .stage_01_bottom {
           // display: inline-flex;
